# box2d-lite

./: .clang-format  .gitignore  CMakeLists.txt
samples/: main.cpp
src/: Arbiter.cpp  Arbiter.h  Body.cpp  Body.h  CMakeLists.txt  Collide.cpp  Joint.cpp  Joint.h  Matrix2x2.cpp  RigidBody.cpp  RigidBody.h  Rotate2.cpp  VecMath.h  Vector2.cpp  World.cpp  World.h
